--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "bunx biome format --write"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "^7.3.4",
+    "@mui/material-nextjs": "^7.3.3",
     "@mui/x-data-grid": "^8.13.1",
     "@mui/x-date-pickers": "^8.12.0",
     "@reduxjs/toolkit": "^2.9.0",
