--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 --turbopack",
+    "dev": "next dev -H 0.0.0.0 -p 3040",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 4000",
     "lint": "bunx tsc --noEmit && next lint",
     "format": "bunx biome format --write"
   },
   "dependencies": {
+    "@daniel-rose/envex": "^1.2.0",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -21,11 +22,16 @@
     "@mui/x-data-grid": "^8.13.1",
     "@mui/x-date-pickers": "^8.12.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "@tailwindcss/postcss": "^4.1.15",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
-    "next": "^15.5.4",
+    "material-react-table": "^3.2.1",
+    "next": "^16.0.3",
+    "next-intl": "^4.3.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.64.0",
@@ -38,13 +44,18 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.5",
     "@eslint/eslintrc": "^3.3.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^24.7.0",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9.37.0",
-    "eslint-config-next": "^15.5.4",
+    "eslint-config-next": "16.0.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.15",
     "typescript": "^5.9.3"
+  },
+  "resolutions": {
+    "@types/react": "19.2.5",
+    "@types/react-dom": "19.2.3"
   }
 }
