--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 3004",
+    "dev": "next dev -H 0.0.0.0 -p 3040",
     "build": "next build",
     "start": "next start -p 3004",
     "lint": "bunx tsc --noEmit && next lint",
@@ -30,10 +30,10 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "material-react-table": "^3.2.1",
-    "next": "^16.0.3",
+    "next": "16.0.8",
     "next-intl": "^4.3.12",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.64.0",
     "react-redux": "^9.2.0",
     "same-runtime": "^0.0.1",
