--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nextjs-shadcn",
+  "name": "admin-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -H 0.0.0.0 -p 3040",
     "build": "next build",
-    "start": "next start -p 3004",
+    "start": "next start -p 3000",
     "lint": "bunx tsc --noEmit && next lint",
     "format": "bunx biome format --write"
   },
