--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "material-react-table": "^3.2.1",
-    "next": "16.0.8",
+    "next": "16.0.10",
     "next-intl": "^4.3.12",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -45,6 +46,7 @@
     "@biomejs/biome": "^2.2.5",
     "@eslint/eslintrc": "^3.3.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^24.7.0",
     "@types/react": "19.2.5",
     "@types/react-dom": "19.2.3",
