refactor: 💡 proxy support

--- a/env.template
+++ b/env.template
@@ -2,4 +2,5 @@ NEXT_PUBLIC_CREDENTIAL_API=http://localhost:3000
 NEXT_PUBLIC_USER_API=http://localhost:4000
 SERVICE_UUID=7227dbde-3735-4c54-a98b-82e27c3f561a
 NEXT_PUBLIC_AUTH_WEB=http://localhost:3030
-NEXT_PUBLIC_BASE_PATH="/admin" # if localhost set to "/"
+NEXT_PUBLIC_BASE_PATH="" # if pure run localhost with auth-web set to ""
+NEXT_PUBLIC_ASSET_PREFIX="/admin" # if pure run localhost with auth-web set to "/admin"
